--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header>
 
         <ul class="nav">
-            <li class="nav-itens"><a href="index.html">home</a></li>
-            <li class="nav-itens"><a href="index.html">bah</a></li>
+            <li class="nav-itens"><a href="index.html">início</a></li>
+            <li class="nav-itens"><a href="past.html">informações</a></li>
             <li class="nav-itens"><a href="index.html">coisas</a></li>
         </ul>
 
@@ -28,65 +28,55 @@
     <section id="banner">
         <img width="100%" height="800" src="img/FESTEJANDO A CONEXÃO ENTRE O CAMPO-CIDADE.jpg"
             alt="banner festejando a conexão do campo cidade, feito no canva.">
+        <a href="index.html" class="button">comece aqui</a>
     </section>
 
-    <section id="introdução">
+    <section id="apresentação">
 
         <div class="section">
 
-            <h2>apresentação</h2>
+            <h2>Conexão entre o Campo e a Cidade</h2>
 
-            <p>A história se passa anos após os eventos da trilogia original. Kratos agora vive recluso nos reinos
-                nórdicos e é pai de um garoto chamado Atreus. Após a morte de sua esposa, os dois embarcam em uma
-                jornada para espalhar suas cinzas no ponto mais alto dos nove reinos. Ao longo do caminho, enfrentam
-                criaturas mitológicas, deuses nórdicos e, principalmente, seus próprios conflitos internos.
-
-                A trama é envolvente e surpreende por sua profundidade emocional. Kratos, antes um símbolo de fúria
-                incontrolável, agora é retratado como um pai em luta com seu passado violento e tentando guiar o filho
-                por um caminho diferente. A relação entre os dois é o coração do jogo e é desenvolvida com sensibilidade
-                e realismo.
-
+            <p>
+                A conexão entre o campo e a cidade é extremamente importante, visto que nesse vínculo gera impactos
+                positivos em todo o território brasileiro, os beneficios que ambos oferecem ao País desenvolvem a
+                economia, ampliando a posição do Brasil como provedor de alimentos e exportações, bem como lubrifica o
+                emprego no campo, nas cidades e comércio. Entretanto, mesmo tendo avanços incríveis nessa relação é
+                importante destacar que há desafios que persistem em valorizar esse vinculo. Dessa forma, é primordial
+                ter visão que impulsionando a agropecuária e o mercado interno vai fortalecer esse ligação tão
+                importante
+                para o País.
             </p>
 
         </div>
 
     </section>
 
-    <section id="beneficio 1">
+    <section id="beneficio 1-Agropecuária">
 
         <div class="development">
 
             <div class="development-left">
 
-                <h2>beneficio 1</h2>
+                <h2>agropecuária</h2>
 
-                <p>A luz solar traz diversos benefícios para a saúde do corpo e da mente. Um dos mais conhecidos é a
-                    produção de
-                    vitamina D, essencial para o fortalecimento dos ossos, dentes e do sistema imunológico. Essa
-                    vitamina também
-                    está associada à prevenção de doenças autoimunes e ao bom funcionamento do organismo como um todo.
+                <p>A agropecuária é uma atividade praticada pelo campo que se concentra na agricultura, pecuária e,
+                    também, ajuda principalmente no crescimento da economia brasileira, pois com a grande produção de
+                    alimentos dessa área, disponibiliza recursos para o Brasil no mercado internacional. Essa prática
+                    muito importante atualmente para o País, teve seu início desde a chegada dos portugueses, o qual
+                    ofereceu muitos
+                    recursos para os indivíduos, o que ampliou os mercados, e atualmente continua beneficiando a zona
+                    rural, assim deixando esse vínculo mais sólido, esses beneficios disponibilizados pelo campo são:
+                </p><br>
 
-                    Além disso, a exposição ao sol estimula a liberação de serotonina, um neurotransmissor que contribui
-                    para a
-                    sensação de bem-estar e felicidade. Por isso, tomar sol com regularidade pode ajudar a melhorar o
-                    humor e
-                    combater sintomas de depressão leve e ansiedade, especialmente em épocas de dias mais curtos ou
-                    nublados.
+                <li>Alimentos para o consumo: transporta uma grande quantidade de alimentos para os mercados como
+                    frutas, carnes, tipos de grãos, como de arroz, milho, feijão e soja.</li><br>
 
-                    Outro ponto importante é que a luz natural ajuda a regular o ciclo circadiano, ou seja, o relógio
-                    biológico
-                    do corpo. A exposição à luz do dia, especialmente pela manhã, contribui para o equilíbrio da
-                    produção de
-                    melatonina, o hormônio responsável pelo sono, o que melhora a qualidade do descanso noturno.
+                <li>Matérias-primas: é um elemento muito importante que oferece algodão, coura, madeira e lã, o que
+                    ajuda na fabricação de vários produtos, desde de alimentos, roupas e eletrônicos.</li><br>
 
-                    A luz solar também pode colaborar com a saúde da pele, ajudando no tratamento de algumas condições
-                    como
-                    psoríase, eczema e até acne leve, desde que a exposição seja feita com responsabilidade. Alguns
-                    estudos
-                    indicam ainda que a exposição ao sol pode auxiliar na redução da pressão arterial, favorecendo a
-                    saúde
-                    cardiovascular.</p>
-
+                <li>Fortalece as Indústrias Urbanas: com os ingredientes disponibilizados pela agropecuária, abastece
+                    fábricas de alimentos processados.</li>
             </div>
 
             <img src="img/OIP.jpg" alt="foto de uma flor rosa">
@@ -101,25 +91,18 @@
 
             <div class="development-left">
 
-                <h2>beneficio 2</h2>
+                <h2>Mercado interno</h2>
 
-                <p>A tecnologia tem transformado profundamente a sociedade contemporânea, trazendo uma série de
-                    benefícios que impactam positivamente diversos aspectos da vida humana. Um dos principais avanços
-                    proporcionados pela tecnologia está na comunicação. Hoje, é possível conectar-se instantaneamente
-                    com pessoas ao redor do mundo, seja por meio de mensagens, chamadas de vídeo ou redes sociais. Essa
-                    conectividade não apenas fortalece vínculos pessoais, mas também amplia oportunidades de colaboração
-                    profissional e acesso à informação.
+                <p>O mercado interno são comércios dentro do país que tem um papel importante para o desenvolvimento
+                    econômico, o qual ocorre vendas de produtos, produzidos pela agropecuária. Essa prática reduz a
+                    dependência de mercados externos dos produtores, assim protege os agricultores de oscilações
+                    globais, o que gera incertezas em relação aos seus ganhos, assim reduziria a produção dos campos,
+                    logo, com poucos produtos nos mercados haverá aumentos na inflação. O mercado interno, não permite
+                    que essa realidade aconteça, pois essa atividade dentro do país traz certezas aos produtores dos
+                    seus ganhos, o que leva a gerar mais produtos. Dessa forma, essa prática se mostra estremamente
+                    importante para o campo e o país.
 
-                    Na área da saúde, a tecnologia possibilitou diagnósticos mais precisos, tratamentos mais eficazes e
-                    maior monitoramento de doenças. Equipamentos modernos, como tomógrafos e robôs cirúrgicos,
-                    contribuem para procedimentos menos invasivos e com maior taxa de sucesso. Além disso, aplicativos e
-                    dispositivos vestíveis permitem que as pessoas acompanhem sua saúde em tempo real, promovendo
-                    hábitos mais saudáveis e prevenindo problemas antes que se agravem.
-
-                    Outro campo profundamente beneficiado é a educação. Plataformas de ensino a distância democratizam o
-                    acesso ao conhecimento, permitindo que pessoas de diferentes regiões tenham contato com conteúdos de
-                    qualidade. Ferramentas tecnológicas também tornam o aprendizado mais dinâmico e personalizado,
-                    adaptando-se ao ritmo e estilo de cada aluno.</p>
+                </p>
 
             </div>
 
@@ -151,20 +134,12 @@
 
     </section>
 
-<footer>
+    <footer>
 
-<h3>Festejando conexão campo-cidade</h3>
+        <h3>2025-Festejando conexão campo-cidade</h3>
 
-<div class="termination">
 
-<p>Produzido por Gustavo Cordeiro</p>
-<p>Professora Sabrina Jorge</p>
-<p>Colégio lysímaco Ferreira da Costa</p>
-<p>@agrinho</p>
-
-</div>
-
-</footer>
+    </footer>
 
 </body>
 
