--- a/past.html
+++ b/past.html
@@ -10,48 +10,79 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@650&family=Oswald:wght@700&display=swap"
         rel="stylesheet">
-    <title>Site-agrinho</title>
+    <title>Curiosidades sobre a conexão entre o campo-cidade</title>
 </head>
 
 <body>
 
- <header>
+    <header>
 
         <ul class="nav">
             <li class="nav-itens"><a href="index.html">início</a></li>
             <li class="nav-itens"><a href="past.html">informações</a></li>
-            <li class="nav-itens"><a href="index.html">coisas</a></li>
+            <li class="nav-itens"><a href="index.html">pdf</a></li>
         </ul>
 
     </header>
 
-<section>
+    <section id="carregando novas curiosidades">
 
-<div class="section-infor">
+        <div class="section-infor">
 
-<h2>Curiosidades</h2>
+            <h1>Curiosidades</h1>
 
+            <p>aguarde para novas curiosidades</p>
 
+            <img src="img/carregando.gif" alt="gif utilizado pelo canva">
 
-</div>
+        </div>
 
-</section>
+    </section>
 
-<section>
+    <section id="curiosidades">
 
-<div class="section-img">
+        <div class="development">
 
-<img width="300" height="300" src="img/Post do Instagram animado 2023 carregando ano novo laranja e preto.gif" alt="milho modificado pelo canva">
+            <div class="development-left">
 
-<img width="300" height="300" src="img/Post do Instagram animado 2023 carregando ano novo laranja e preto.gif" alt="milho modificado">
+                 <h2>energia sustentável compartilhada</h2>
 
-<img width="300" height="300" src="img/Post do Instagram animado 2023 carregando ano novo laranja e preto.gif" alt="">
+                <p>O campo instala painéis solares turbinas eólicas ou biodigestores, o que ajuda a ter energia
+                    renovável e
+                    diminui os impactos ambientais, e as cidades próximas se beneficiam, pois se abastecem com essa
+                    energia,
+                    assim ajuda na conta de luz ou comércios urbanos, já o campo consegue vender para cooperativas ou
+                    consumidores urbanos, o que gera uma renda extra para a zona rural.
 
-</div>
+                </p>
 
-</section>
+            </div>
 
-<footer>
+            <img src="img/OIP.jpg" alt="imagem de uma flor">
+
+        </div>
+
+    </section>
+
+    <section id="imagens do campo, cidade e do Brasil" class="conteudo">
+
+        <div class="section-img">
+
+            <img width="300" height="300"
+                src="img/Post do Instagram animado 2023 carregando ano novo laranja e preto.gif"
+                alt="milho modificado pelo canva">
+
+            <img width="300" height="300"
+                src="img/Post do Instagram animado 2023 carregando ano novo laranja e preto.gif" alt="milho modificado">
+
+            <img width="300" height="300"
+                src="img/País.png" alt="bandeira do Brasil feita pelo canva.">
+
+        </div>
+
+    </section>
+
+    <footer>
 
         <h3>2025-Festejando conexão campo-cidade</h3>
 
