--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@650&family=Oswald:wght@700&display=swap"
         rel="stylesheet">
-    <title>Site-agrinho</title>
+    <title>Conexão entre o campo e a cidade</title>
 </head>
 
 <body>
@@ -20,18 +20,22 @@
         <ul class="nav">
             <li class="nav-itens"><a href="index.html">início</a></li>
             <li class="nav-itens"><a href="past.html">informações</a></li>
-            <li class="nav-itens"><a href="index.html">coisas</a></li>
+            <li class="nav-itens"><a href="index.html">pdf</a></li>
         </ul>
 
     </header>
 
     <section id="banner">
+
         <img width="100%" height="800" src="img/FESTEJANDO A CONEXÃO ENTRE O CAMPO-CIDADE.jpg"
             alt="banner festejando a conexão do campo cidade, feito no canva.">
-        <a href="index.html" class="button">comece aqui</a>
+
+        <button class="button" onclick="location.href='index.html'">COMECE AQUI</button>
+
     </section>
 
-    <section id="apresentação">
+
+    <section id="apresentação" class="conteudo">
 
         <div class="section">
 
@@ -44,15 +48,14 @@
                 emprego no campo, nas cidades e comércio. Entretanto, mesmo tendo avanços incríveis nessa relação é
                 importante destacar que há desafios que persistem em valorizar esse vinculo. Dessa forma, é primordial
                 ter visão que impulsionando a agropecuária e o mercado interno vai fortalecer esse ligação tão
-                importante
-                para o País.
+                importante para o País.
             </p>
 
         </div>
 
     </section>
 
-    <section id="beneficio 1-Agropecuária">
+    <section id="beneficio 1-Agropecuária" class="conteudo">
 
         <div class="development">
 
@@ -64,9 +67,9 @@
                     também, ajuda principalmente no crescimento da economia brasileira, pois com a grande produção de
                     alimentos dessa área, disponibiliza recursos para o Brasil no mercado internacional. Essa prática
                     muito importante atualmente para o País, teve seu início desde a chegada dos portugueses, o qual
-                    ofereceu muitos
-                    recursos para os indivíduos, o que ampliou os mercados, e atualmente continua beneficiando a zona
-                    rural, assim deixando esse vínculo mais sólido, esses beneficios disponibilizados pelo campo são:
+                    ofereceu muitos recursos para os indivíduos, o que ampliou os mercados, e atualmente continua
+                    beneficiando a zona
+                    urbana, assim deixando esse vínculo mais sólido, esses beneficios disponibilizados pelo campo são:
                 </p><br>
 
                 <li>Alimentos para o consumo: transporta uma grande quantidade de alimentos para os mercados como
@@ -77,6 +80,7 @@
 
                 <li>Fortalece as Indústrias Urbanas: com os ingredientes disponibilizados pela agropecuária, abastece
                     fábricas de alimentos processados.</li>
+
             </div>
 
             <img src="img/OIP.jpg" alt="foto de uma flor rosa">
@@ -85,7 +89,7 @@
 
     </section>
 
-    <section id="baneficio 2">
+    <section id="baneficio 2-mercado interno" class="conteudo">
 
         <div class="development">
 
@@ -96,7 +100,8 @@
                 <p>O mercado interno são comércios dentro do país que tem um papel importante para o desenvolvimento
                     econômico, o qual ocorre vendas de produtos, produzidos pela agropecuária. Essa prática reduz a
                     dependência de mercados externos dos produtores, assim protege os agricultores de oscilações
-                    globais, o que gera incertezas em relação aos seus ganhos, assim reduziria a produção dos campos,
+                    globais, essas oscilações gera incertezas em relação aos seus ganhos, assim reduziria a produção dos
+                    campos,
                     logo, com poucos produtos nos mercados haverá aumentos na inflação. O mercado interno, não permite
                     que essa realidade aconteça, pois essa atividade dentro do país traz certezas aos produtores dos
                     seus ganhos, o que leva a gerar mais produtos. Dessa forma, essa prática se mostra estremamente
@@ -112,21 +117,19 @@
 
     </section>
 
-    <section id="conclusão">
+    <section id="conclusão" class="conteudo">
 
         <div class="section">
 
-            <h2>conclusão</h2>
+            <h2>Vínculo importante</h2>
 
-            <p>A história se passa anos após os eventos da trilogia original. Kratos agora vive recluso nos reinos
-                nórdicos e é pai de um garoto chamado Atreus. Após a morte de sua esposa, os dois embarcam em uma
-                jornada para espalhar suas cinzas no ponto mais alto dos nove reinos. Ao longo do caminho, enfrentam
-                criaturas mitológicas, deuses nórdicos e, principalmente, seus próprios conflitos internos.
-
-                A trama é envolvente e surpreende por sua profundidade emocional. Kratos, antes um símbolo de fúria
-                incontrolável, agora é retratado como um pai em luta com seu passado violento e tentando guiar o filho
-                por um caminho diferente. A relação entre os dois é o coração do jogo e é desenvolvida com sensibilidade
-                e realismo.
+            <p>O campo e a cidade têm um vínculo muito importante para o desenvolvimento do Brasil, essa relação agrega
+                valor tanto para o campo quanto para a cidade, como a agropecuária que produz alimentos para a cidade, o
+                que ajuda a preencher os estoques de produtos, assim vendendo e ambos auxiliando para o desenvolvimento
+                da zona rural e urbana. Sendo assim, sem os recursos que ambos disponibilizam resultaria em uma
+                realidade trágica, o qual o campo não produziria para a cidade e levaria poucos produtos para vender,
+                logo, aumentando a inflação do país e traria diversas dificuldades para sobreviver. Portanto, é de
+                extrema importância essa relação para um futuro saudável do campo e a cidade.
 
             </p>
 
@@ -137,7 +140,6 @@
     <footer>
 
         <h3>2025-Festejando conexão campo-cidade</h3>
-
 
     </footer>
 
